# AdaFaceMin

./: .gitignore  README.md  pyproject.toml  random_split.py  requirements.txt  train.py
adafacemin/: __init__.py  evaluate_utils.py  utils.py
adafacemin/augmentation/: __init__.py  augmentations.py  rgb_to_bgr_transform.py
adafacemin/backbone/: iresnet.py
adafacemin/datamodule/: __init__.py  sample_data_module.py
adafacemin/dataset/: __init__.py  lfw_flavour_dataset.py
adafacemin/loss/: __init__.py  adaface.py
adafacemin/metric/: __init__.py  lfw_flavour_accuracy.py
adafacemin/model/: __init__.py  face_recognition_model.py
